--- a/MonoGame.Framework.Content.Pipeline/MonoGame.Framework.Content.Pipeline.Windows.csproj
+++ b/MonoGame.Framework.Content.Pipeline/MonoGame.Framework.Content.Pipeline.Windows.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Processors\ModelMeshPartContent.cs" />
     <Compile Include="Processors\ModelMeshPartContentCollection.cs" />
     <Compile Include="Processors\ModelProcessor.cs" />
+    <Compile Include="Processors\PassThroughProcessor.cs" />
     <Compile Include="Processors\SongContent.cs" />
     <Compile Include="Processors\SongProcessor.cs" />
     <Compile Include="Processors\SoundEffectContent.cs" />
